[package]
name = "res"
version = "0.1.0"
edition = "2018"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1", optional = true }
byteorder = { version = "1", optional = true }
crc32fast = { version = "1", optional = true }
downcast-rs = { version = "1", optional = true }
memmap2 = { version = "0.5", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
sha256 = { version = "1", optional = true }

[features]
loader = ["bincode", "downcast-rs"]
writer = ["bincode", "byteorder", "crc32fast", "downcast-rs", "memmap2", "rayon", "sha256"]
